envs/dev/hello/deployment-hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: bitcert-attest
  labels:
    app.kubernetes.io/name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hello
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello
    spec:
      containers:
      - name: hello
        image: ghcr.io/jbyee-test-org/bitcert/hello@sha256:1a80c81e82469dc20c82e02f340c526d18f69b96d056ccd9fa77009c8d2e493a
        ports:
        - containerPort: 8080
