envs/dev/hello/service-hello.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app.kubernetes.io/name: hello
  ports:
  - port: 8080
    targetPort: 8080
